# simple-hakyll-sass-foundation-template

./: README  README.md  simple-hakyll-sass-foundation-template.cabal  site.hs  stack.yaml
htmls/: index.html
pages/: page1.html  page2.html
scss/project/: styling.scss
templates/: default.html
