name:               simple-hakyll-sass-foundation-template
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.8.3.2
                  , hakyll-sass >= 0.2.0
                  , hsass == 0.4.0
                  , hlibsass == 0.1.5.0
  ghc-options:      -threaded
  default-language: Haskell2010
